--- a/onepiece.theme.css
+++ b/onepiece.theme.css
@@ -17,7 +17,7 @@
   --success-color: #E7E380;
   --danger-color: #210501;
   --url-color: #9B4820;
-  --background-image: url('https://media.discordapp.net/attachments/923209827528876064/1234171996091322368/one_piece_3-wallpaper-1920x1080.jpg?ex=662fc3bd&is=662e723d&hm=2f62f40d4b5c46ed7ac9211f15eae65858666a2622d73aeeac819644a8ce1ba2&=&format=webp&width=1049&height=590');
+  --background-image: url('https://cdn.discordapp.com/attachments/923209827528876064/1234171996091322368/one_piece_3-wallpaper-1920x1080.jpg?ex=663509bd&is=6633b83d&hm=2fab8e24166d0d5611a59f034170ddb296bb2330bfd14f6e07741343482179e6&');
   --background-shading: 68%;
   --background-position: center;
   --background-size: cover;
